--- a/client/partials/list.html
+++ b/client/partials/list.html
@@ -1,7 +1,7 @@
 
 <div class="btn-toolbar">
   <div class="btn-group">
-    <a class="btn btn-large" href="#/edit/{{index + 1}}">Edit</a>
+    <a class="btn btn-large" href="/edit/{{index + 1}}">Edit</a>
   </div>
 </div>
 
