--- a/client/partials/list.html
+++ b/client/partials/list.html
@@ -23,7 +23,7 @@
     <td>{{car.title}}</td>
     <td>{{car.mileage}}</td>
     <td>{{car.year}}</td>
-    <td>{{car.price}}</td>
+    <td>{{car.price | currency}}</td> <!-- currency filter -->
     <td><img style="height: 60px; float: right;" src="{{car.imgData}}"</img></td>
   </tr>
 </table>
