--- a/client/partials/list.html
+++ b/client/partials/list.html
@@ -21,9 +21,10 @@
 
   <tr ng-repeat="car in cars" ng-click="select($index)" ng-class="{'info': $index == index}">
     <td>{{car.title}}</td>
-    <td>{{car.mileage}}</td>
+    <td>{{car.mileage | mileage}}</td>
     <td>{{car.year}}</td>
     <td>{{car.price | currency}}</td> <!-- currency filter -->
     <td><img style="height: 60px; float: right;" src="{{car.imgData}}"</img></td>
   </tr>
 </table>
+
