--- a/client/partials/list.html
+++ b/client/partials/list.html
@@ -24,7 +24,7 @@
     <td>{{car.mileage | mileage}}</td>
     <td>{{car.year}}</td>
     <td>{{car.price | currency}}</td> <!-- currency filter -->
-    <td><img style="height: 60px; float: right;" src="{{car.imgData}}"</img></td>
+    <td><img style="height: 60px; float: right;" ng-src="{{car.imgData}}"</img></td>
   </tr>
 </table>
 
